Force othervm mode for /native tests